@@ -1,3 +1,9 @@
+2015-11-09 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCC.lex,
+	  src/SDCCval.c:
+	  UTF-32 and UTF-16 encodig in strVal().
+
 2015-11-08 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c: added IS_AOP_IMMEDIATE,
